// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeSearchResults /> basic rendering should render empty table data 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="code-search-results border-bottom pb-4"
      >
        <div
          class="d-flex align-items-center justify-content-between mb-3"
        >
          <div
            class="flex-grow-1 text-truncate mr-3"
          >
            <h3
              class="lead m-0 text-truncate"
            >
              Search results for 
              <em>
                "
                test@test.com
                "
              </em>
            </h3>
          </div>
          <div
            class="flex-grow-0 flex-shrink-0"
          >
            <button
              class="close-search-results-btn btn btn-outline-primary"
              type="button"
            >
              <span
                class="pgn__icon mr-2"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Close search results
            </button>
          </div>
        </div>
        <div
          class="fade alert-content alert alert-warning show"
          role="alert"
        >
          <span
            class="pgn__icon alert-icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="pgn__alert-message-wrapper"
          >
            <div
              class="alert-message-content"
            >
              There are no results.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render error 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="code-search-results border-bottom pb-4"
      >
        <div
          class="d-flex align-items-center justify-content-between mb-3"
        >
          <div
            class="flex-grow-1 text-truncate mr-3"
          >
            <h3
              class="lead m-0 text-truncate"
            >
              Search results for 
              <em>
                "
                test@test.com
                "
              </em>
            </h3>
          </div>
          <div
            class="flex-grow-0 flex-shrink-0"
          >
            <button
              class="close-search-results-btn btn btn-outline-primary"
              type="button"
            >
              <span
                class="pgn__icon mr-2"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Close search results
            </button>
          </div>
        </div>
        <div
          class="fade alert-content alert alert-danger show"
          role="alert"
        >
          <span
            class="pgn__icon alert-icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="pgn__alert-message-wrapper"
          >
            <div
              class="alert-message-content"
            >
              <div
                class="alert-heading h4"
              >
                Unable to load data
              </div>
              <p>
                Try refreshing your screen 
                Network Error
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render loading 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="code-search-results border-bottom pb-4"
      >
        <div
          class="d-flex align-items-center justify-content-between mb-3"
        >
          <div
            class="flex-grow-1 text-truncate mr-3"
          >
            <h3
              class="lead m-0 text-truncate"
            >
              Search results for 
              <em>
                "
                test@test.com
                "
              </em>
            </h3>
          </div>
          <div
            class="flex-grow-0 flex-shrink-0"
          >
            <button
              class="close-search-results-btn btn btn-outline-primary"
              type="button"
            >
              <span
                class="pgn__icon mr-2"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Close search results
            </button>
          </div>
        </div>
        <div>
          <div
            class="sr-only"
          >
            Loading...
          </div>
          <span
            aria-busy="true"
            aria-live="polite"
          >
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
            <span
              class="react-loading-skeleton"
              style="height: 25px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render nothing visible when isOpen prop is false 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative"
  />
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render table data 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="code-search-results border-bottom pb-4"
      >
        <div
          class="d-flex align-items-center justify-content-between mb-3"
        >
          <div
            class="flex-grow-1 text-truncate mr-3"
          >
            <h3
              class="lead m-0 text-truncate"
            >
              Search results for 
              <em>
                "
                test@test.com
                "
              </em>
            </h3>
          </div>
          <div
            class="flex-grow-0 flex-shrink-0"
          >
            <button
              class="close-search-results-btn btn btn-outline-primary"
              type="button"
            >
              <span
                class="pgn__icon mr-2"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Close search results
            </button>
          </div>
        </div>
        <div
          class="code-search-results-table"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class="table-responsive"
              >
                <table
                  class="table table-sm table-striped"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                    >
                      <th
                        class=""
                        scope="col"
                      >
                        Coupon Batch
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Code
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Redeemed
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Redemption Date
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Course Title
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Actions
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class=""
                  >
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        Test Coupon Name
                      </td>
                      <td
                        class=""
                      >
                        Y7XS3OGG7WB7KQ5R
                      </td>
                      <td
                        class=""
                      >
                        <span
                          class="pgn__icon text-primary"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            focusable="false"
                            height="24"
                            role="img"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2Z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="sr-only"
                          >
                            has been redeemed
                          </span>
                        </span>
                      </td>
                      <td
                        class=""
                      >
                        August 28, 2019
                      </td>
                      <td
                        class=""
                      >
                        Test Course Title
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                    </tr>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        Test Coupon Name 2
                      </td>
                      <td
                        class=""
                      >
                        CMX9N1LPGTUSL7DU
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                    </tr>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        Test Coupon Name
                      </td>
                      <td
                        class=""
                      >
                        Y7XS3OGG7WB7KQ5R
                      </td>
                      <td
                        class=""
                      >
                        <span
                          class="pgn__icon text-primary"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            focusable="false"
                            height="24"
                            role="img"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2Z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="sr-only"
                          >
                            has been redeemed
                          </span>
                        </span>
                      </td>
                      <td
                        class=""
                      >
                        August 30, 2019
                      </td>
                      <td
                        class=""
                      >
                        Test Course Title
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                    </tr>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        Test Coupon Name
                      </td>
                      <td
                        class=""
                      >
                        FAG2LVLNHAKIXQ0Q
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="row mt-2"
          >
            <div
              class="col d-flex justify-content-center"
            >
              <nav
                aria-label="code-search-results-pagination"
                class="pagination-default"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  aria-relevant="text"
                  class="sr-only"
                >
                  Page 1, Current Page, of 1
                </div>
                <ul
                  class="pagination"
                >
                  <li
                    class="page-item disabled"
                  >
                    <button
                      aria-label="Previous"
                      class="previous page-link btn btn-primary"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <div>
                        <span
                          class="pgn__icon"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            focusable="false"
                            height="24"
                            role="img"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                        Previous
                      </div>
                    </button>
                  </li>
                  <li
                    class="page-item disabled"
                  >
                    <button
                      aria-label="Next"
                      class="next page-link btn btn-primary"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <div>
                        Next
                        <span
                          class="pgn__icon"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            focusable="false"
                            height="24"
                            role="img"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render table data when searchQuery is a code 1`] = `
<div>
  <div
    class="pgn-transition-replace-group position-relative"
  >
    <div
      style="padding: .1px 0px;"
    >
      <div
        class="code-search-results border-bottom pb-4"
      >
        <div
          class="d-flex align-items-center justify-content-between mb-3"
        >
          <div
            class="flex-grow-1 text-truncate mr-3"
          >
            <h3
              class="lead m-0 text-truncate"
            >
              Search results for 
              <em>
                "
                FAG2LVLNHAKIXQ0Q
                "
              </em>
            </h3>
          </div>
          <div
            class="flex-grow-0 flex-shrink-0"
          >
            <button
              class="close-search-results-btn btn btn-outline-primary"
              type="button"
            >
              <span
                class="pgn__icon mr-2"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Close search results
            </button>
          </div>
        </div>
        <div
          class="code-search-results-table"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class="table-responsive"
              >
                <table
                  class="table table-sm table-striped"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                    >
                      <th
                        class=""
                        scope="col"
                      >
                        Coupon Batch
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Code
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Redeemed
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Redemption Date
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Assigned To
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Course Title
                      </th>
                      <th
                        class=""
                        scope="col"
                      >
                        Actions
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class=""
                  >
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        Test Coupon Name
                      </td>
                      <td
                        class=""
                      >
                        FAG2LVLNHAKIXQ0Q
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        test@test.com
                      </td>
                      <td
                        class=""
                      >
                        -
                      </td>
                      <td
                        class=""
                      >
                        <button
                          class="remind-btn btn-sm p-0 btn btn-link"
                          type="button"
                        >
                          Remind
                        </button>
                         | 
                        <button
                          class="revoke-btn btn-sm p-0 btn btn-link"
                          type="button"
                        >
                          Revoke
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="row mt-2"
          >
            <div
              class="col d-flex justify-content-center"
            >
              <nav
                aria-label="code-search-results-pagination"
                class="pagination-default"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  aria-relevant="text"
                  class="sr-only"
                >
                  Page 1, Current Page, of 1
                </div>
                <ul
                  class="pagination"
                >
                  <li
                    class="page-item disabled"
                  >
                    <button
                      aria-label="Previous"
                      class="previous page-link btn btn-primary"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <div>
                        <span
                          class="pgn__icon"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            focusable="false"
                            height="24"
                            role="img"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                        Previous
                      </div>
                    </button>
                  </li>
                  <li
                    class="page-item disabled"
                  >
                    <button
                      aria-label="Next"
                      class="next page-link btn btn-primary"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <div>
                        Next
                        <span
                          class="pgn__icon"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            focusable="false"
                            height="24"
                            role="img"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
